Fix overflow on X axis

--- a/src/resources/server.css
+++ b/src/resources/server.css
@@ -4,7 +4,7 @@ main .logs {
 }
 
 main .row {
-    white-space: pre;
+    white-space: break-spaces;
 }
 
 main .row .time {
